Prevented logo text in header from wrapping text with flex-shrink: 0.

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ body {
     margin-left: 32px;
     font-size: 24px;
     color: #f9faf8;
+    flex-shrink: 0;
 }
 
 .links {
